# agentic-ethereum

./: README.md
agentkit-test/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
client/: README.md  bun.lockb  components.json  next.config.ts  package.json  tsconfig.json
client/src/app/: layout.tsx  page.tsx
client/src/components/: Account.tsx  voice.tsx
client/src/components/ui/: button.tsx  input.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  testbed.tsx  tooltip.tsx
client/src/config/: index.ts
client/src/providers/: coinbase.tsx  wagmi.ts
contracts/: Cargo.toml
contracts/scripts/: main.rs
contracts/src/: constructor.sol  lib.rs  main.rs
contracts/tests/: smart_vault.rs
contracts/tests/abi/: mod.rs
evm/: README.md  bun.lockb  package.json
evm/contracts/: Afbap.sol  Registry.sol
