[package]
name = "stylus-hello-world"
version = "0.1.10"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]

stylus-sdk = "=0.6.0"

alloy-primitives = { version = "=0.7.6" }
alloy-sol-types = "=0.7.6"
alloy-sol-macro = "=0.7.6"
alloy-sol-macro-expander = "=0.7.6"
alloy-sol-macro-input = "=0.7.6"
# Even though `alloy` includes `alloy-primitives` and `alloy-sol-types` we need
# to keep both versions for compatibility with the Stylus SDK. Once they start
# using `alloy` we can remove these.
openzeppelin-stylus = "0.1.1"
mini-alloc = "0.4.2"
hex = "0.4.3"
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
alloy = { version = "=0.7.3", features = [
  "contract",
  "network",
  "providers",
  "provider-http",
  "rpc-client",
  "rpc-types-eth",
  "signer-local",
  "getrandom",
] }

[[bin]]
name = "deploy"
path = "scripts/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
